# idn-catalogue-profile

./: .gitignore  README.adoc  guidance.html  idn-dcat.ttl  nuxt.config.ts  package.json  pnpm-lock.yaml  profile.html  profile.ttl  specification.html  validator-compounded.ttl  validator-sddi.shapes.ttl  validator.ttl
.github/workflows/: deploy.yaml
app/components/: AppNav.vue  IDCButton.vue  IDCHeader.vue  IDCLogo.vue  MainNav.vue
app/layouts/: default.vue
app/pages/: guidance.vue  index.vue  specification.vue
app/utils/: consts.ts  types.ts
calculators/: README.adoc  __init__.py  pyproject.toml  setup.py
calculators/calculators/: _SCORES.py  __init__.py  calc_fair.py
calculators/tests/: test_fair.py  test_output_forms.py
calculators/tests/data/: AGIL.ttl  test_input_invalid_01.ttl
mappings/: sdo.html  sdo.ttl
public/: site.webmanifest
public/images/: IDN-CP.drawio  lc-model.drawio
rd/: blurb.html  guidance.html  idn.css  specification.html  validator-compounded.ttl  validator.ttl
rd/mappings/: agil.sdo.ttl  rif-cs.html  sdo.html  sdo.py  sdo.ttl
rd/scripts/: agil.sdo.ttl
resources/: blurb.html  complete.ttl  guidance.html  idn.css  minimal.ttl  specification.html  validator-compounded.ttl  validator.ttl
resources/mappings/: rif-cs.html  sdo.html  sdo.ttl
resources/tests/: MPF1226-invalid.2.ttl  MPF1226-invalid.ttl  MPF1226.ttl  pyproject.toml  test_all.py
ro-crate/: BagItSpec.txt
ro-crate/test-item/: dummy-excel-file.xlsx  dummy-text-file.txt
scores/: README.adoc  _SCORES.py  scores.ttl
style/: idn.css
(+6 files in other folders)
