[tool.poetry]
name = "idn-catalogue-profile"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.net>"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
pyshacl = "^0.20.0"
httpx = "^0.23.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
